styles.css
html {
    min-height: 100%;
}

body {
    background: url(https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80) fixed;
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    min-height: 100vh;
    margin-left: 7em;
    margin-right: 7em;
    background-position: center center;
}

.navContainer {
    display: flex;
    flex-direction: row;
    height: auto;
    width: 100%;
    justify-content: space-around;
    background: #000;
}

.navContainer a {
    color: #fff;
    font-size: 25px;
}

.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.bg1 {
    border-radius: 5%;
    width: 40em;
    margin-bottom: -2em;
}

.introP {
    margin: 2em 2em;
    font-size: 50px;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.7);
    margin-bottom: 1.5em;
}

h1 {
    text-align: center;
    font-size: 100px;
    margin-top: 40px;
}

.flex-container {
    display: flex;
    height: 100%;
    position: relative;
    z-index: 1;
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-end;
}

.flex-item img {
    height: 20em;
    width: 23em;
    border: 1px black solid;
    border-radius: 5%;
    position: relative;
    z-index: 5;
}

.flex-item.steak:hover .toolTip1 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 4.76em;
    width: 9.2em;
    padding-top: 130px;
    border-radius: 5%;
    top: 0;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;
}

.toolTip1 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.flex-item.salmon:hover .toolTip2 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 4.75em;
    width: 9.19em;
    padding-top: 130px;
    border-radius: 5%;
    top: 0;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;  
}

.toolTip2 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.flex-item.elk:hover .toolTip3 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 4.77em;
    width: 9.2em;
    padding-top: 130px;
    border-radius: 5%;
    top: 0%;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;
}

.toolTip3 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.backToTop {
    position: absolute;
    left: 50;
    right: 50;
    margin-bottom: 20em;
}

